<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:id="@+id/text1"
        android:layout_below="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"/>

    <TextView
        android:id="@+id/text2"
        android:layout_below="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"/>

    <TextView
        android:id="@+id/text3"
        android:layout_below="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"/>

    <TextView
        android:id="@+id/text4"
        android:layout_below="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text4"/>

</RelativeLayout>