<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_health">

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.hr.fitness.ui.health.HealthFragment"
        android:label="@string/navigation_health"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.hr.fitness.ui.history.HistoryFragment"
        android:label="@string/navigation_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.hr.fitness.ui.chat.ChatFragment"
        android:label="@string/navigation_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>